# littleutils

./: .gitignore  .travis.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  utils.py
.github/workflows/: test.yml
littleutils/: __init__.py
