[metadata]
name = littleutils
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Small personal collection of python utility functions
url = https://github.com/alexmojaki/littleutils
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = littleutils
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
python_requires = >=3.8
